fixed username input on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -97,4 +97,8 @@ canvas {
   .alert {
     width: 50%;
   }
+  .usernameInputCont {
+    flex-direction: column;
+    text-align: center;
+  }
 }
